--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Vitae</title>
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Curriculum Vitae</title>
+    </head>
 
-<body>
-    
-</body>
+    <body>
+        <header>
+
+        </header>
+        <navbar>
+
+        </navbar>
+
+
+        <footer>
+
+        </footer>
+    </body>
 </html>
