--- a/index.html
+++ b/index.html
@@ -8,15 +8,36 @@
 
     <body>
         <header>
-
+            <h1>Curriculum Vitae</h1>
+            <h2>Diego Alexander Leon Torres</h2>
         </header>
         <navbar>
-
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="html/educacion.htm">Educación</a></li>
+                <li><a href="html/experiencia.html">Experiencia</a></li>
+            </ul>
         </navbar>
 
+        <section>
+            <h2>Información personal</h2>
+            <ul>
+                <li> <strong>Fecha de nacimiento:</strong> 27 de Mayo de 1993</li>
+                <li><strong>Lugar de nacimiento:</strong> Bogotá D.C </li>
+
+            </ul>
+
+
+
+        </section>
 
         <footer>
-
+            <strong>Derechos reservados</strong>
+            <ul>
+                <li><strong>Correo electrónico: </strong><em>correomuestra@gmail.com</em></li>
+                <li><strong>Teléfono: </strong><em>7-589-586</em></li>
+                <li><strong>Dirección: </strong><em>Calle 5ª 57 Sur 25</em></li>
+            </ul>
         </footer>
     </body>
 </html>
