Final página índex
Página índex finalizada con los requerimientos que se solicitaron

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
     <body>
         <header>
+            <!--Imagne SVG del Logo-->
+            <svg>
+                <image xlink:href="img/logo.svg"></image>
+            </svg>
+
             <h1>Curriculum Vitae</h1>
             <h2>Diego Alexander Leon Torres</h2>
         </header>
@@ -21,13 +26,24 @@
 
         <section>
             <h2>Información personal</h2>
+            <img src="img/fotoperfil.jpg" width="250">
             <ul>
                 <li> <strong>Fecha de nacimiento:</strong> 27 de Mayo de 1993</li>
                 <li><strong>Lugar de nacimiento:</strong> Bogotá D.C </li>
-
             </ul>
 
+            <article>
+                <h3>Perfil</h3>
+                <p>
+                    Soy una persona responsable con el trabajo, me gusta investigar y mejorar cada día en el campo de la programación, actualmente estudio en la universidad Ingeniería de sistemas y complemento mis conocimientos con cursos de programación, adicionalmente me desempeño como desarrollador junior en el lenguaje de programación C# y SQL server. 
+                </p>
 
+                <h3>Idiomas</h3>
+                <ul>
+                    <li>Español - Lectura y escritura</li>
+                    <li>Ingles - Nivel básico</li>
+                </ul>
+            </article>
 
         </section>
 
