--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <navbar>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="html/educacion.htm">Educación</a></li>
+                <li><a href="html/educacion.html">Educación</a></li>
                 <li><a href="html/experiencia.html">Experiencia</a></li>
             </ul>
         </navbar>
