Correcciones Index - Información personal
Colocar la información personal en la parte del header para que se vea
en todas las paginas

--- a/html/educacion.html
+++ b/html/educacion.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-         <header>
+        <header>
             <!--Imagne SVG del Logo-->
             <svg>
                 <image xlink:href="../img/logo.svg"></image>
@@ -15,6 +15,10 @@
 
             <h1>Curriculum Vitae</h1>
             <h2>Diego Alexander Leon Torres</h2>
+            <ul>
+                <li> <strong>Fecha de nacimiento:</strong> 27 de Mayo de 1993</li>
+                <li><strong>Lugar de nacimiento:</strong> Bogotá D.C </li>
+            </ul>
         </header>
         <navbar>
             <ul>
@@ -23,6 +27,11 @@
                 <li><a href="experiencia.html">Experiencia</a></li>
             </ul>
         </navbar>
+
+        <section>
+            <h2>Información personal</h2>
+
+        </section>
 
         <footer>
 
