Estructura inicial experiencia
Menú de navegación, y footer en la página de experiencias

--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -3,20 +3,35 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Curriculum Vitae</title>
+        <title>Curriculum Vitae - Experiencia</title>
     </head>
 
     <body>
         <header>
+            <!--Imagne SVG del Logo-->
+            <svg>
+                <image xlink:href="../img/logo.svg"></image>
+            </svg>
 
+            <h1>Curriculum Vitae</h1>
+            <h2>Diego Alexander Leon Torres</h2>
         </header>
         <navbar>
-
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="educacion.html">Educación</a></li>
+                <li><a href="experiencia.html">Experiencia</a></li>
+            </ul>
         </navbar>
 
 
         <footer>
-
+            <strong>Derechos reservados</strong>
+            <ul>
+                <li><strong>Correo electrónico: </strong><em>correomuestra@gmail.com</em></li>
+                <li><strong>Teléfono: </strong><em>7-589-586</em></li>
+                <li><strong>Dirección: </strong><em>Calle 5ª 57 Sur 25</em></li>
+            </ul>
         </footer>
     </body>
 </html>
