--- a/html/experiencia.html
+++ b/html/experiencia.html
@@ -15,6 +15,10 @@
 
             <h1>Curriculum Vitae</h1>
             <h2>Diego Alexander Leon Torres</h2>
+            <ul>
+                <li> <strong>Fecha de nacimiento:</strong> 27 de Mayo de 1993</li>
+                <li><strong>Lugar de nacimiento:</strong> Bogotá D.C </li>
+            </ul>
         </header>
         <navbar>
             <ul>
@@ -23,8 +27,25 @@
                 <li><a href="experiencia.html">Experiencia</a></li>
             </ul>
         </navbar>
+        <section>
+            <h2>Experiencia</h2>
 
 
+            <h3>Habilidades e interese profesionales</h3>
+
+            <video controls width="360px" height="209px" poster="../img/poster.jpg" preload="none">
+                <source src="../media/habilidades.ogv" type="video/ogg"> 
+                <source src="../media/habilidades.mp4" type="video/mp4"> 
+                <source src="../media/habilidades.webm" type="video/webm"> 
+
+                Lo sentimos, tu navegador no soporta ninguno de los formatos.
+            </video>
+
+            <h3>Hobbies</h3>
+            <audio src="../media/hobbies.mp3" controls preload="none" />
+        </section>
+
+        <br/>
         <footer>
             <strong>Derechos reservados</strong>
             <ul>
